Add replication protocol, follower sync checks, and HTTP node server for distributed AtlasDB cluster